[tool.poetry]
name = "gonk"
version = "0.5.3"
description = "Celery tasks for Django made easy"
authors = ["Francisco Javier Lendinez Tirado <lendinez@kasfactory.net>", "Pablo Moreno <pablo@kasfactory.net>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["celery", "tasks"]
homepage = "https://github.com/kasfactory/gonk"
exclude = ["test_app/**"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.0.0"
Django = ">=3.2.18"
python-dateutil = "^2.8.2"
PyJWT = { version = ">=1.5,<3.0", optional = true }
requests = { version = "^2.0.0", optional = true }
djangorestframework = { version = "^3.0.0", optional = true }
django-celery-beat = { version = "^2.3.0", optional = true }

[tool.poetry.dev-dependencies]
redis = "^4.3.3"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
mercure = ["PyJWT", "requests"]
drf = ["djangorestframework"]
persistance = ["django-celery-beat"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
